# Path-pilot

./: .editorconfig  .env.example  .gitignore  .prettierignore  agents.md  package.json  readme.md  tempCodeRunnerFile.c
backend/: main.py  pyproject.toml  requirements.txt
backend/config/: database.py  settings.py
backend/middleware/: auth.py
backend/models/: __init__.py  assessment.py  profile.py  roadmap.py  user.py
backend/routes/: assessment.py  auth.py  roadmap.py  user.py
backend/schemas/: __init__.py  assessment.py  auth.py  profile.py  roadmap.py  user.py
backend/services/: ai_service.py
docs/: API.md  CONTRIBUTING.md  DATABASE.md  DEPENDENCIES.md  SETUP.md  TECH_STACK.md  architecture.md  designs.md  development-log.md  memory.md  phases.md  prd.md  rules.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: app.jsx  index.css  main.jsx
frontend/src/components/landing/: CareerPathsSection.jsx  CtaSection.jsx  FeaturesSection.jsx  HeroSection.jsx  HowItWorksSection.jsx  SectionHeader.jsx  TestimonialsSection.jsx
frontend/src/components/layout/: Container.jsx  DashboardLayout.jsx  Footer.jsx  Navbar.jsx  ProtectedRoute.jsx  Section.jsx
frontend/src/components/ui/: Badge.jsx  Button.jsx  Card.jsx  Input.jsx  (+3 more)
frontend/src/context/: AuthContext.jsx  ThemeContext.jsx
frontend/src/pages/: AssessmentPage.jsx  DashboardPage.jsx  ForgotPasswordPage.jsx  HomePage.jsx  LoginPage.jsx  ProfilePage.jsx  RegisterPage.jsx  RoadmapPage.jsx
frontend/src/services/: api.js  supabaseClient.js
