[project]
name = "pathpilot-backend"
version = "0.1.0"
description = "Path Pilot — AI-powered career guidance platform (Backend API)"
requires-python = ">=3.11"
readme = "../readme.md"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
